--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.wongnaiassignment"
-        minSdkVersion 16
+        minSdkVersion 19
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -30,9 +30,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-//    dataBinding {
-//        enabled = true
-//    }
+    dataBinding {
+        enabled = true
+    }
     buildFeatures {
         viewBinding = true
     }
@@ -63,11 +63,12 @@ dependencies {
     //For scalable dp
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
 
-    //For circular ImageView
-
-    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    //Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
+    //Glide for SVG
+    implementation 'com.github.corouteam:GlideToVectorYou:v2.0.0'
 
 
 
