--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,9 @@ dependencies {
     //Glide for SVG
     implementation 'com.github.corouteam:GlideToVectorYou:v2.0.0'
 
+    //Swipe to refresh
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+
 
 
 
